# MonadicParty2019

./: .gitignore  README.md
MassivTalk/: .hindent.yaml  CHANGELOG.md  MassivTalk.cabal  package.yaml  stack.yaml
MassivTalk/app/: Main.hs
MassivTalk/bench/: Integral.hs  Intro.hs
MassivTalk/src/MassivTalk/: Integral.hs
MassivTalk/src/MassivTalk/Day1/: Intro00.hs  Intro01_Representations.hs  Intro02_Index.hs  Intro03_DelayedVsManifest.hs  Intro03_HigherDimensions.hs  Intro04_Slicing.hs  Intro05_Monadic.hs  Intro06_Mutable.hs  Intro07_Computation.hs  Intro08_Random.hs  Intro09_Stencil.hs
party/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
party/src/: Lib.hs
